# ollama_games

./: .env.example  LICENSE  Makefile  README.md  docker-compose.yaml  example_models.txt  game_theory.py  pyproject.toml  simple.docker-compose.yaml
ImageFactory/: ollama.basic.Dockerfile  pybase.Dockerfile
ImageFactory/config/ollama/: model_list.txt  ollama.env
ImageFactory/scripts/init/: pybase.init.sh  service_init.sh
ImageFactory/scripts/utility/: common_utils.sh  helper_utils.sh
ImageFactory/scripts/utility/misc/: misc_utils_banner.sh  service_banners.sh
ImageFactory/workspace/: pyproject.toml
ImageFactory/workspace/apps/: arena.py
ImageFactory/workspace/apps/arena_modules/: __init__.py  custom_game.py  formatters.py  shared_services.py
ImageFactory/workspace/apps/arena_modules/play/: __init__.py  game_runner.py  payoff_editor.py  player_config.py
ImageFactory/workspace/apps/arena_modules/queue/: __init__.py  models.py  ui.py
ImageFactory/workspace/apps/arena_modules/roles/: __init__.py  (+1 more)
ImageFactory/workspace/apps/gametheory/: __init__.py
apps/: arena.py
apps/__marimo__/session/: arena.py.json
gametheory/: __init__.py
gametheory/analytics/: __init__.py  service.py
gametheory/core/: __init__.py  config.py  types.py
gametheory/games/: battle_of_sexes.py  chicken.py  iterated_pd.py  matching_pennies.py  three_player_public.py  trust_game.py
gametheory/metrics/: persistence.py  tracker.py
gametheory/model/: __init__.py  client.py
gametheory/ui/: __init__.py  analytics.py  components.py
gametheory/visualization/: charts.py
(+77 files in other folders)
