[project]
name = "gametheory"
version = "0.1.0"
description = "Game Theory LLM Arena - Test AI models in strategic game scenarios"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "altair>=6.0.0",
    "basedpyright>=1.33.0",
    "duckdb>=1.4.2",
    "httpx>=0.28.1",
    "huggingface-hub>=1.1.4",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.10",
    "marimo[mcp]>=0.17.8",
    "mcp>=1.21.2",
    "nbformat>=5.10.4",
    "nest-asyncio>=1.6.0",
    "notebook>=7.4.7",
    "numpy>=2.3.5",
    "ollama>=0.6.1",
    "openai>=2.8.0",
    "pandas>=2.3.3",
    "panel>=1.8.3",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "pydantic-ai>=1.19.0",
    "pydanticai-ollama>=0.1.4",
    "pytest>=9.0.1",
    "python-lsp-server>=1.13.1",
    "ruff>=0.14.5",
    "sqlglot>=28.0.0",
    "ty>=0.0.1a26",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gametheory"]

[project.scripts]
arena = "apps.arena:app"
